# careernav-env

./: Dockerfile  README.md  inference.py  llm_mock.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate-submission.sh
baseline/: run_baseline.py  test_variance.py
careernav/: data.py  env.py  models.py
careernav/fetchers/: courses.py  jobs.py  resume.py  schemes.py
graders/: graders.py
mocks/: schemes.json
server/: app.py
